--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "version": "0.0.0",
+  "license": "MPL-2.0",
   "scripts": {
     "dev": "vite --port $PORT",
     "build": "tsc && vite build",
